fix bug with jumping tables

--- a/UFO-level-1/static/css/style.css
+++ b/UFO-level-1/static/css/style.css
@@ -1,12 +1,11 @@
 .input-group {
-    margin: auto;
     justify-content: center;
     padding-left: 5%;
     padding-right: 5%;
     padding-top: 1%;
 }
 
-#label-id {
+#labelID {
     font-weight: bold;
     text-align: center;
     padding: 10px;
